--- a/index.html
+++ b/index.html
@@ -1,58 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Naijy – Nigeria’s National Digital Engine</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Naijy - Nigeria’s National Digital Engine</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-  <!-- HEADER -->
-  <header class="header">
-    <h1>Naijy</h1>
-    <p class="subtitle">Nigeria’s National Digital Engine</p>
-    <p class="tagline">Connecting platforms, people, and progress.</p>
+  <header>
+    <div class="container">
+      <h1>Naijy</h1>
+      <p>Nigeria’s National Digital Engine - Connecting platforms, people, and progress.</p>
+      <nav>
+        <ul>
+          <li><a href="#categories">Categories</a></li>
+          <li><a href="#core-platforms">Core Platforms</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <!-- INTRO -->
-  <section class="intro">
-    <p>
-      Naijy is Nigeria’s unified digital infrastructure — organizing national platforms,
-      public systems, innovation engines, and global connections into one coherent ecosystem.
-    </p>
-  </section>
+  <main>
+    <section id="categories">
+      <h2>National Categories</h2>
+      <div class="grid">
+        <div class="tile">Business/Economy</div>
+        <div class="tile">Security & Justice</div>
+        <div class="tile">Youth</div>
+        <div class="tile">Education & Leadership</div>
+        <div class="tile">Health</div>
+        <div class="tile">Agriculture</div>
+        <div class="tile">Energy & Environment</div>
+        <div class="tile">Housing</div>
+        <div class="tile">Culture & Faith</div>
+        <div class="tile">Media</div>
+        <div class="tile">SporTertainment</div>
+        <div class="tile">Hospitality</div>
+        <div class="tile">Transport & Infrastructure</div>
+        <div class="tile">Technology & Innovation</div>
+        <div class="tile">Trade & Industry</div>
+        <div class="tile">Foreign Affairs</div>
+      </div>
+    </section>
 
-  <!-- CATEGORIES -->
-  <section class="categories">
-    <h2>National Platform Categories</h2>
+    <section id="core-platforms">
+      <h2>Core Platforms</h2>
+      <div class="grid">
+        <div class="tile platform">Nigeria Public Revenue Map</div>
+        <div class="tile platform">Naijy Influence Network</div>
+        <div class="tile platform">Youth Empowerment Hub</div>
+        <div class="tile platform">National Education Portal</div>
+        <div class="tile platform">Healthcare Access Map</div>
+        <div class="tile platform">AgriTech Solutions</div>
+        <div class="tile platform">Energy & Environment Tracker</div>
+        <div class="tile platform">Housing & Urban Planning</div>
+        <div class="tile platform">Culture & Heritage Exchange</div>
+      </div>
+    </section>
+  </main>
 
-    <div class="grid">
-      <div class="card">Business & Economy</div>
-      <div class="card">Security & Justice</div>
-      <div class="card">Youth</div>
-      <div class="card">Education & Leadership</div>
-      <div class="card">Health</div>
-      <div class="card">Agriculture</div>
-      <div class="card">Energy & Environment</div>
-      <div class="card">Housing</div>
-      <div class="card">Culture & Faith</div>
-      <div class="card">Media</div>
-      <div class="card">Sport & Entertainment</div>
-      <div class="card">Hospitality & Tourism</div>
-      <div class="card">Technology & Innovation</div>
-      <div class="card">Transportation</div>
-      <div class="card">Public Revenue & Infrastructure</div>
-      <div class="card">Global Relations</div>
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Naijy. All rights reserved.</p>
+      <p>Trust Infrastructure | Engines & Platforms | National Collaboration | Global Connection</p>
     </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="footer">
-    <p>© 2025 Naijy. All rights reserved.</p>
   </footer>
 
 </body>
